# Computer_Vision

ComputerVisionPoolTable/: CMakeLists.txt  README.md
ComputerVisionPoolTable/include/: BallDetector.hpp  BallTracker.hpp  BoundingBox.hpp  ColorEnum.hpp  HelperFunctions.hpp  MeanAveragePrecision.hpp  MeanIntersectionOverUnion.hpp  TableDetector.hpp  TopViewVisual.hpp
ComputerVisionPoolTable/src/: BallDetector.cpp  BallTracker.cpp  HelperFunctions.cpp  MeanAveragePrecision.cpp  MeanIntersectionOverUnion.cpp  TableDetector.cpp  TopViewVisual.cpp  main.cpp
Lab1/: CMakelists.txt  OpenImg  OpenImg.cpp  Task2  Task2.cpp  Task3.cpp  main.cpp
Lab2/: CMakeCache.txt  CMakeLists.txt  Computer vision 2024 – Lab 2.docx  Imagefilters.cpp  Imagefilters.h  Makefile  main.cpp  ~$mputer vision 2024 – Lab 2.docx
Lab3/: CMakeLists.txt  Makefile  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp
Lab4/: CMakeCache.txt  CMakeLists.txt  Makefile  Task  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  cmake_install.cmake
Lab5/: CMakeCache.txt  Makefile  Task  Task1.cpp  cmake_install.cmake
Lab6/: CMakeCache.txt  Makefile  Task  Task1.cpp  cmake_install.cmake
